--- a/burevestnik/Main.storyboard
+++ b/burevestnik/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17140" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7tl-Y3-ado">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7tl-Y3-ado">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17115"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,7 +34,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f3n-OB-95e">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="92" id="WLE-Vg-w5F" customClass="Cell" customModule="burevestnik" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="92"/>
@@ -48,7 +47,7 @@
                                                     <rect key="frame" x="20" y="11" width="394" height="70"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1EW-s2-h6L">
-                                                            <rect key="frame" x="0.0" y="0.0" width="41.5" height="45.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="42" height="45.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -77,22 +76,21 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="BRi-RB-osI"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="f3n-OB-95e" secondAttribute="bottom" id="6Lf-bH-qbg"/>
                             <constraint firstItem="BRi-RB-osI" firstAttribute="trailing" secondItem="f3n-OB-95e" secondAttribute="trailing" id="FIu-Ik-mnI"/>
                             <constraint firstItem="f3n-OB-95e" firstAttribute="top" secondItem="exK-9V-wTK" secondAttribute="top" id="duP-U2-ILO"/>
                             <constraint firstItem="f3n-OB-95e" firstAttribute="leading" secondItem="BRi-RB-osI" secondAttribute="leading" id="pXF-hl-ehP"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="BRi-RB-osI"/>
                     </view>
                     <navigationItem key="navigationItem" id="9gd-Se-xJK">
-                        <barButtonItem key="leftBarButtonItem" systemItem="compose" id="8Oa-rN-Xw4">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="8Oa-rN-Xw4">
                             <connections>
                                 <action selector="composeDidTap:" destination="ocf-0N-eWr" id="abi-Rs-bZW"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="Ud5-Pb-X4s"/>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="f3n-OB-95e" id="VwG-OC-4AU"/>
@@ -103,9 +101,4 @@
             <point key="canvasLocation" x="-200.00000000000003" y="91.741071428571431"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
