--- a/burevestnik/Main.storyboard
+++ b/burevestnik/Main.storyboard
@@ -48,7 +48,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubble" translatesAutoresizingMaskIntoConstraints="NO" id="Awj-Q0-TDk">
-                                                    <rect key="frame" x="10" y="31.5" width="61.5" height="56.5"/>
+                                                    <rect key="frame" x="9" y="33.5" width="63.5" height="53.5"/>
                                                     <color key="tintColor" systemColor="systemGray3Color"/>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="AKo-Ac-A1a">
@@ -74,13 +74,13 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="AKo-Ac-A1a" secondAttribute="trailing" constant="20" id="KKy-k9-r6q"/>
-                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="trailing" secondItem="1EW-s2-h6L" secondAttribute="trailing" constant="10" id="Vli-b6-gUi"/>
-                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="bottom" secondItem="1EW-s2-h6L" secondAttribute="bottom" constant="7" id="Xh2-Sy-g4T"/>
+                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="trailing" secondItem="1EW-s2-h6L" secondAttribute="trailing" constant="11" id="Vli-b6-gUi"/>
+                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="bottom" secondItem="1EW-s2-h6L" secondAttribute="bottom" constant="6" id="Xh2-Sy-g4T"/>
                                                 <constraint firstItem="AKo-Ac-A1a" firstAttribute="top" secondItem="iwb-cG-iov" secondAttribute="top" constant="11" id="Xzf-EZ-CSm"/>
-                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="top" secondItem="1EW-s2-h6L" secondAttribute="top" constant="-7" id="Y3d-DN-t8p"/>
+                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="top" secondItem="1EW-s2-h6L" secondAttribute="top" constant="-5" id="Y3d-DN-t8p"/>
                                                 <constraint firstItem="AKo-Ac-A1a" firstAttribute="leading" secondItem="iwb-cG-iov" secondAttribute="leading" constant="20" id="eCC-yc-h3u"/>
                                                 <constraint firstAttribute="bottom" secondItem="AKo-Ac-A1a" secondAttribute="bottomMargin" constant="11" id="u5x-Dz-ku2"/>
-                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="leading" secondItem="1EW-s2-h6L" secondAttribute="leading" constant="-10" id="uG3-4i-caw"/>
+                                                <constraint firstItem="Awj-Q0-TDk" firstAttribute="leading" secondItem="1EW-s2-h6L" secondAttribute="leading" constant="-11" id="uG3-4i-caw"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -118,17 +118,13 @@
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="UeC-6H-rD7"/>
-                        <barButtonItem title="Me Online" id="ekM-jL-wk8">
+                        <barButtonItem title="Online" id="ekM-jL-wk8">
                             <color key="tintColor" systemColor="labelColor"/>
                             <connections>
                                 <action selector="peersButtonDidTap:" destination="ocf-0N-eWr" id="EnS-hs-5K0"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="brC-eb-E0D"/>
-                        <barButtonItem title="WWAN" id="Bna-7x-K4y">
-                            <color key="tintColor" systemColor="labelColor"/>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="I45-5w-Nld"/>
                         <barButtonItem systemItem="compose" id="8Oa-rN-Xw4">
                             <connections>
                                 <action selector="composeDidTap:" destination="ocf-0N-eWr" id="abi-Rs-bZW"/>
@@ -146,7 +142,6 @@
                         <outlet property="peersButton" destination="ekM-jL-wk8" id="5sp-e7-UeI"/>
                         <outlet property="sendMessageBigButton" destination="O2M-1g-atv" id="TCY-Fa-fll"/>
                         <outlet property="tableView" destination="f3n-OB-95e" id="VwG-OC-4AU"/>
-                        <outlet property="wwanButton" destination="Bna-7x-K4y" id="3Vy-aa-6a7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="crg-Nd-S1L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -194,7 +189,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bubble" width="30.5" height="30.5"/>
+        <image name="bubble" width="33.5" height="33.5"/>
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
